Conclusao da quarta aula do curso de Lista e coleções de dados da alura, junto do desafio proposto no fim da aula.